--- a/src/app/board-management/board-list/board-list.component.css
+++ b/src/app/board-management/board-list/board-list.component.css
@@ -7,3 +7,16 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.spinner-loading {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    right: 5%;
+    bottom: 10%;
+}
+
+.no-boards-registered {
+    position: absolute;
+    bottom: 60%;
+}
