--- a/src/app/board-management/modal-board-edit/modal-board-edit.component.html
+++ b/src/app/board-management/modal-board-edit/modal-board-edit.component.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
     <div>
         <div class="row">
-            <div class="col">
+            <div class="col-2">
                 <p>Id:</p>
             </div>
             <div class="col">
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-2">
                 <p>Nome:</p>
             </div>
             <div class="col">
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-2">
                 <p>Descrição:</p>
             </div>
             <div class="col">
