--- a/src/app/working-area/board-panel/board-panel.component.html
+++ b/src/app/working-area/board-panel/board-panel.component.html
@@ -3,11 +3,14 @@
     <div class="spinner-border spinner-loading" role="status" *ngIf="!isLoadCompleted"></div>
     <div cdkDropListGroup class="col">
         <div class="example-container" *ngFor="let stack of stackList ">
-            <h2>{{stack.name}}</h2>
-
+            <h2>{{stack.name}}&nbsp;&nbsp;<button (click)="openModalStackUpdate(stack)"><i
+                        class="bi bi-pencil-fill"></i></button></h2><!-- TODO - BOTÃO DE INCLUSÃO DE NOVA TASK CHAMANDO A MODAL -->
             <div cdkDropList [cdkDropListData]="findTasksByStack(stack.id!)" class="example-list"
                 (cdkDropListDropped)="updateTaskPositionAndSync($event, stack.id!)">
-                <div class="example-box" *ngFor="let task of findTasksByStack(stack.id!)" cdkDrag>{{task.title}}
+                <div class="example-box" style="height: 3.5rem; position: relative;" *ngFor="let task of findTasksByStack(stack.id!)" cdkDrag>
+                    <button style="width: 100%; height: 100%; border: 0px; background-color: white" (click)="openModalViewTask(task)">
+                        <h3>{{ task.title }}</h3>
+                    </button>
                 </div>
             </div>
         </div>
