--- a/src/app/working-area/board-panel/board-panel.component.html
+++ b/src/app/working-area/board-panel/board-panel.component.html
@@ -3,12 +3,17 @@
     <div class="spinner-border spinner-loading" role="status" *ngIf="!isLoadCompleted"></div>
     <div cdkDropListGroup class="col">
         <div class="example-container" *ngFor="let stack of stackList ">
-            <h2>{{stack.name}}&nbsp;&nbsp;<button (click)="openModalStackUpdate(stack)"><i
-                        class="bi bi-pencil-fill"></i></button></h2><!-- TODO - BOTÃO DE INCLUSÃO DE NOVA TASK CHAMANDO A MODAL -->
+            <h2>{{stack.name}}&nbsp;&nbsp;
+                <button (click)="openModalStackUpdate(stack)"><i class="bi bi-pencil-fill"></i></button>
+                <button (click)="openModalViewTask(undefined, stack.id)"><i
+                        class="bi bi-plus-square-dotted"></i></button>
+            </h2>
             <div cdkDropList [cdkDropListData]="findTasksByStack(stack.id!)" class="example-list"
                 (cdkDropListDropped)="updateTaskPositionAndSync($event, stack.id!)">
-                <div class="example-box" style="height: 3.5rem; position: relative;" *ngFor="let task of findTasksByStack(stack.id!)" cdkDrag>
-                    <button style="width: 100%; height: 100%; border: 0px; background-color: white" (click)="openModalViewTask(task)">
+                <div class="example-box" style="height: 3.5rem; position: relative;"
+                    *ngFor="let task of findTasksByStack(stack.id!)" cdkDrag (cdkDragStarted)="draggedTask = task">
+                    <button style="width: 100%; height: 100%; border: 0px; background-color: white"
+                        (click)="openModalViewTask(task)">
                         <h3>{{ task.title }}</h3>
                     </button>
                 </div>
