--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,33 @@
-<div class="conteiner-fluid">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand nav-link" href="#" routerLink="/boards">
-            <i class="fa fa-user-edit"> </i> {{ title }} </a>
-        <div *ngIf="isUserLoggedIn()" class="navbar-collapse collapsed justify-content-between" id="navbarContent">
-            <ul class="navbar-nav mr-auto">
-            </ul>
-            <ul *ngIf="isUserLoggedIn()" class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" (click)="logout()">Logout</a>
-                </li>
-            </ul>
+<div>
+    <nav class="navbar navbar-dark bg-dark fixed-top" *ngIf="isUserLoggedIn()">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">TaskManager</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/boards"><i class="bi bi-list-stars"></i> Lista de quadros</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/userdetails"><i class="bi bi-person-circle"></i> Editar dados cadastrais</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" (click)="logout()"><i class="bi bi-door-open-fill"></i> Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
     <router-outlet></router-outlet>
