--- a/src/app/board-management/board-list/board-list.component.html
+++ b/src/app/board-management/board-list/board-list.component.html
@@ -13,10 +13,14 @@
             <div class="card-body">
                 <h1>{{board.name}}</h1>
                 <p>{{board.description}}</p>
+                
                 <button type="button" class="btn btn-secondary" [routerLink]="['/board-panel/', board.id]">Abrir
                     quadro</button>
-                <button type="button" class="btn btn-light" (click)="openModalBoardEdit(board)">Editar</button>
-                <button type="button" class="btn btn-danger" (click)="openModalBoardDelete(board)">Excluir</button>
+                <button type="button" class="btn btn-light" (click)="openModalBoardDetails(board)">Detalhes</button>
+                <div *ngIf="board.owner!.id === sessionService.loggedUser.id">
+                    <button type="button" class="btn btn-warning" (click)="openModalBoardDetails(board)">Gerenciar</button>
+                    <button type="button" class="btn btn-danger" (click)="openModalBoardDelete(board)">Excluir</button>
+                </div>
             </div>
         </div>
         <div class="no-boards-registered" *ngIf="isLoadCompleted && boardList.length==0">
