--- a/src/app/board-management/board-list/board-list.component.html
+++ b/src/app/board-management/board-list/board-list.component.html
@@ -13,12 +13,13 @@
             <div class="card-body">
                 <h1>{{board.name}}</h1>
                 <p>{{board.description}}</p>
-                
+
                 <button type="button" class="btn btn-secondary" [routerLink]="['/board-panel/', board.id]">Abrir
                     quadro</button>
                 <button type="button" class="btn btn-light" (click)="openModalBoardDetails(board)">Detalhes</button>
                 <div *ngIf="board.owner!.id === sessionService.loggedUser.id">
-                    <button type="button" class="btn btn-warning" (click)="openModalBoardDetails(board)">Gerenciar</button>
+                    <button type="button" class="btn btn-warning"
+                        [routerLink]="['/board-edit/', board.id]">Gerenciar</button>
                     <button type="button" class="btn btn-danger" (click)="openModalBoardDelete(board)">Excluir</button>
                 </div>
             </div>
@@ -30,5 +31,10 @@
             <h2 class="text-center"><button type="button" class="btn btn-light"
                     (click)="openModalBoardInsert()">Cadastrar novo quadro</button></h2>
         </div>
+    </div>
+    <div class="example-button-container" style="position: absolute; right: 3%; bottom: 10%">
+        <button mat-fab color="warn" aria-label="Example icon button with a home icon" (click)="openModalBoardInsert()">
+            <mat-icon>add</mat-icon>
+        </button>
     </div>
 </body>
