--- a/src/app/user-onboarding/user-details/user-details.component.css
+++ b/src/app/user-onboarding/user-details/user-details.component.css
@@ -1,9 +1,19 @@
+body {
+    position: absolute;
+    background-image: url('../../../assets/UserDetails.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+
 .user-details {
-    top: 300px;
+    top: 200px;
     max-width: 800px;
     margin: 50px auto;
     position: relative;
-
 }
 
 .userdetails-form .form-field {
@@ -17,9 +27,11 @@
     height: 36px;
     border-width: 0 0 2px 0;
     border-color: #000000;
+    color: grey;
     font-size: 18px;
     line-height: 26px;
     font-weight: 400;
+    font-weight: 800;
 }
 
 .userdetails-form .input-text:focus {
