--- a/src/app/user-onboarding/user-details/user-details.component.html
+++ b/src/app/user-onboarding/user-details/user-details.component.html
@@ -1,31 +1,33 @@
-<section class="user-details">
-    <h1 class="title" style="text-align: center; text-transform: uppercase;">Dados cadastrais</h1>
-    <form class="userdetails-form row">
-        <fieldset [disabled]="fieldSetDisabled" class="row">
-            <div class="form-field col-lg-6">
-                <input class="input-text js-input" type="text" name="username" [(ngModel)]="user.username" disabled>
-                <label class="label">Usuário</label>
+<body>
+    <section class="user-details">
+        <h1 class="title" style="text-align: center; text-transform: uppercase;">Dados cadastrais</h1>
+        <form class="userdetails-form row">
+            <fieldset [disabled]="fieldSetDisabled" class="row">
+                <div class="form-field col-lg-6">
+                    <input class="input-text js-input" type="text" name="username" [(ngModel)]="user.username" disabled>
+                    <label class="label">Usuário</label>
+                </div>
+                <div class="form-field col-lg-6 ">
+                    <input name="email" class="input-text js-input" type="email" [(ngModel)]="user.email" disabled>
+                    <label class="label">E-mail</label>
+                </div>
+                <div class="form-field col-lg-6 ">
+                    <input name="nickName" class="input-text js-input" type="text" [(ngModel)]="user.nickName" required>
+                    <label class="label">Apelido</label>
+                </div>
+                <div class=" form-field col-lg-6 ">
+                    <input name="phoneNumber" class="input-text js-input" type="text" [(ngModel)]="user.phoneNumber"
+                        required>
+                    <label class="label">Telefone</label>
+                </div>
+            </fieldset>
+            <div class="form-field col-lg-12" *ngIf="currentAction == Action.VIEWING">
+                <input class="btn btn-primary" type="submit" value="Editar dados" (click)="editMode()">
             </div>
-            <div class="form-field col-lg-6 ">
-                <input name="email" class="input-text js-input" type="email" [(ngModel)]="user.email" required>
-                <label class="label">E-mail</label>
+            <div class="form-field col-lg-12" *ngIf="currentAction == Action.EDITING">
+                <input class="btn btn-success" type="submit" value="Salvar" (click)="updateUser()">
+                <input class="btn btn-light" type="submit" value="Cancelar" (click)="refreshPage()">
             </div>
-            <div class="form-field col-lg-6 ">
-                <input name="nickName" class="input-text js-input" type="text" [(ngModel)]="user.nickName" required>
-                <label class="label">Apelido</label>
-            </div>
-            <div class=" form-field col-lg-6 ">
-                <input name="phoneNumber" class="input-text js-input" type="text" [(ngModel)]="user.phoneNumber"
-                    required>
-                <label class="label">Telefone</label>
-            </div>
-        </fieldset>
-        <div class="form-field col-lg-12" *ngIf="currentAction == Action.VIEWING">
-            <input class="btn btn-primary" type="submit" value="Editar dados" (click)="editMode()">
-        </div>
-        <div class="form-field col-lg-12" *ngIf="currentAction == Action.EDITING">
-            <input class="btn btn-success" type="submit" value="Salvar" (click)="updateUser()">
-            <input class="btn btn-light" type="submit" value="Cancelar" (click)="viewingMode()">
-        </div>
-    </form>
-</section>
+        </form>
+    </section>
+</body>
