--- a/src/app/working-area/board-panel/board-panel.component.css
+++ b/src/app/working-area/board-panel/board-panel.component.css
@@ -1,6 +1,6 @@
 body {
   position: absolute;
-  background-image: url('../../../assets/BoardPanel.jpg');
+  background-color: cadetblue;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
