--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 1000px;">
     <div class="row">
         <div class="col-9">
             <div>
