--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-9">
                     <b>Checklist</b>
-                    <button type="button" class="btn btn-light" (click)="currentAction=Action.INSERTING">
+                    <button type="button" class="btn btn-light" (click)="allowCreateNewInternalTask()">
                         <i class="bi bi-plus-square"></i> <b></b>
                     </button>
                 </div>
