New dialog to include and remove task members

--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -50,7 +50,7 @@
         <div class="col">
             <div class="row">
                 <div class="btn-group-vertical" aria-label="Vertical button group">
-                    <button type="button" class="btn btn-light btn-outline-dark">Membros</button>
+                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskMembersDialog()">Membros</button>
                     <button type="button" class="btn btn-light btn-outline-dark">Conf. notificações</button>
                     <button type="button" class="btn btn-light btn-outline-dark">Conf. vencimento</button>
                 </div>
