Task due date component

--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -50,9 +50,11 @@
         <div class="col">
             <div class="row">
                 <div class="btn-group-vertical" aria-label="Vertical button group">
-                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskMembersDialog()">Membros</button>
+                    <button type="button" class="btn btn-light btn-outline-dark"
+                        (click)="openTaskMembersDialog()">Membros</button>
+                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskDueDateDialog()">Conf.
+                        vencimento</button>
                     <button type="button" class="btn btn-light btn-outline-dark">Conf. notificações</button>
-                    <button type="button" class="btn btn-light btn-outline-dark">Conf. vencimento</button>
                 </div>
             </div>
         </div>
