--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 1000px;">
+<div class="container" style="width: 1000px;" *ngIf="task != undefined">
     <div class="row">
         <div class="col-9">
             <div>
@@ -19,8 +19,8 @@
                         <i class="bi bi-plus-square"></i> <b></b>
                     </button>
                 </div>
-                <div class="col">
-                    <b>{{percentComplete}}% concl.</b>
+                <div class="col" *ngIf="task.internalTasks != undefined">
+                    <b>{{calcPercentage()}}% concl.</b>
                 </div>
             </div>
             <div style="overflow-y:scroll;overflow-x:hidden; height:300px;">
