--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -54,7 +54,7 @@
                         (click)="openTaskMembersDialog()">Membros</button>
                     <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskDueDateDialog()">Conf.
                         vencimento</button>
-                    <button type="button" class="btn btn-light btn-outline-dark">Conf. notificações</button>
+                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openaskNotificationConfigurationDialog()">Conf. notificações</button>
                 </div>
             </div>
         </div>
