--- a/src/app/user-management/dialog-create-user/dialog-create-user.component.html
+++ b/src/app/user-management/dialog-create-user/dialog-create-user.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header" style="width: 700px;">
     <h3 class="modal-title"><b>Novo usuário</b></h3>
 </div>
 <div class="modal-body">
@@ -55,6 +55,6 @@
     <br>
     <div class="modal-footer">
         <button type="button" class="btn btn-success" (click)="saveNewUser()">Salvar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close()">Cancelar</button>
+        <button type="button" class="btn btn-outline-dark" (click)="closeModal()">Cancelar</button>
     </div>
 </div>
