Update stack position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div *ngIf="isUserLoggedIn()">
+    <div *ngIf="isUserLoggedIn()" style="margin-bottom: 55px;">
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">TaskManager</a>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-        </nav><br><br><p></p>
+        </nav>
     </div>
     <router-outlet></router-outlet>
 </div>
