--- a/src/app/working-area/board-panel/board-panel.component.html
+++ b/src/app/working-area/board-panel/board-panel.component.html
@@ -2,11 +2,19 @@
 
     <div class="spinner-border spinner-loading" role="status" *ngIf="!isLoadCompleted"></div>
     <div cdkDropListGroup class="col">
-        <div class="example-container" *ngFor="let stack of stackList ">
-            <h2>{{stack.name}}&nbsp;&nbsp;
-                <button (click)="openModalStackUpdate(stack)"><i class="bi bi-pencil-fill"></i></button>
-                <button (click)="openModalNewTask(stack.id)"><i class="bi bi-plus-square-dotted"></i></button>
-            </h2>
+        <div class="example-container" *ngFor="let stack of stackList">
+            <div class="row align-items-center">
+                <button (click)="updateStackPosition(stack, 'LEFT')" class="col-1" style="padding: 0px; margin-left: 15px;"><i
+                        class="bi bi-arrow-left-square"></i></button>
+                <div class="col">
+                    <p class="col" style="text-align: center; margin-bottom: 0px;"><b>{{stack.name}}</b>&nbsp;&nbsp;
+                        <button (click)="openModalStackUpdate(stack)"><i class="bi bi-pencil-fill"></i></button>
+                        <button (click)="openModalNewTask(stack.id)"><i class="bi bi-plus-square-dotted"></i></button>
+                    </p>
+                </div>
+                <button (click)="updateStackPosition(stack, 'RIGHT')" class="col-1" style="padding: 0px; margin-right: 15px;"><i
+                        class="bi bi-arrow-right-square"></i></button>
+            </div>
             <div cdkDropList [cdkDropListData]="findTasksByStack(stack.id!)" class="example-list"
                 (cdkDropListDropped)="updateTaskPositionAndSync($event, stack.id!)">
                 <div class="example-box" style="height: 3.5rem; position: relative;"
