--- a/src/app/working-area/modal-stack-edit/modal-stack-edit.component.html
+++ b/src/app/working-area/modal-stack-edit/modal-stack-edit.component.html
@@ -13,6 +13,14 @@
         </div>
         <div class="row">
             <div class="col-2">
+                <p>Position:</p>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" disabled value="{{stack.position}}">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
                 <p>Nome:</p>
             </div>
             <div class="col">
